Changed the Back to Top

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             
             <footer>
                 <p>&copy; 2014, Dawg Pizza, <a href="info@dawgpizza.com">info@dawgpizza.com</a></p>
-                <p><a href =file:///C:/Users/Raymond/Documents/UW%20Stuff/2014-2015/INFO%20343/essential-html-css/index.html>Back to Top &uarr;</a></p>
+                <p><a href=#>Back to Top &uarr;</a></p>
             </footer>
     
         </main>
